# tallerPython

./: README.md  pyproject.toml
Clases/: Clase-Kmeans.py  Clase1.md  Clase1_notas.md  Clase2_programa.py  Clase3_programa.py  Clase5.py  Clase6_listas.py  ClaseMatriz.py  adivinador.py
Clases/ej/: relojarena.py
Practicas_1/: cadenas.py  calculadora.py  grafos.py  holamundo.py  validarContrasenas.py
Proyecto/Chatbot/: Dockerfile  db.sqlite3  requirements.txt  runit.sh
Proyecto/Chatbot/app/: chatbot.py
Proyecto/Chatbot/bot/: db.sqlite3  sample.py
Proyecto/Chatbot/bot/templates/: index.html
Proyecto/Flask/: app.py  app2.py
Proyecto/Imagen8Bit/: ascii.txt  escalaGrises.py  main.py
Proyecto/ordenamiento/: binarySearch.py  bubbleSort.py  bucketSort.py  insertionSort.py
Proyecto/pokemon/: getResources.py
Sintaxis/: listas.md  tiposDatos.md  tiposDatos.py
